# mobile_robot_esp32

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  locot.txt
automation/: README.md
automation/calculations/: cal_sine_phase.py  extracted_data.csv
automation/lab_02/: s0_signal_generator.py  s0_test_2motorControl.py  s1_plot_step_response.py  s1_txt_to_csv.py  s2_motor_simulation.py  s2_system_identification.m  s3_test_error.py  s4_evaluate_kinematic_error.py  s4_test_kinematics.py  simulation.py
automation/lab_03/: s0_test_odometry.py
automation/serial/: serial_controlled_signal_plotter.py  serial_ref_tracking.py
automation/test/: test_control.py
controller/: encoder_plotter.py  signal_generator.py  signal_plotter.py
documentation/CAD/: CCR10M_mounting_motor.3mf  CCR10M_robot_mobil.3mf  CCR10M_robot_mobil3.3mf  JGA25-370.SLDPRT  Wheel D65x25.SLDPRT  acople_ruedas.SLDPRT  bse.SLDPRT  llanta.SLDPRT  mounting_motor-Estudio de topología 1.CWR  mounting_motor.SLDPRT  mounting_motor.STL  robot_mobil.SLDASM  rueda.SLDASM
main/: CMakeLists.txt
main/src/: config.h  main.c  main.h
main/src/connect_wifi/: connect_wifi.h
main/src/encoder/: encoder.c  encoder.h
main/src/gpio_state/: gpio_state.c  gpio_state.h
main/src/gpio_utils/: gpio_utils.c  gpio_utils.h
main/src/http_handlers/: http_handlers.c  http_handlers.h
main/src/logging/: logging_utils.c  logging_utils.h
main/src/motor_control/: motor_control.c  motor_control.h
main/src/task_utils/: task_utils.c  task_utils.h
main/src/web_server/: web_server.c
(+297 files in other folders)
